Bug error de creacion nuevo user arreglado